2005-07-12  Albert Chu  <chu11@llnl.gov>

	* Finished initial work on cerebrod metric controller.

	* Added libcerebro metric control API.
	
2005-07-11  Albert Chu  <chu11@llnl.gov>

	* Cleanup cerebrod_speaker_data.[ch] in preparation for metric
	control code.

	* Begin development of metric controller.

	* Fixed potential fd leak in socket reinitialization routines.

	* Fix some buffer overflow bugs.
	
2005-07-08  Albert Chu  <chu11@llnl.gov>

	* Re-named 'metric_protocol' to 'metric_server_protocol' globally
	in preparation of new features being added in.

	* tagged pre-metric-server-protocol-rework-1

	* re-worked cerebrod for metric server protocol change

	* tagged pre-metric-server-protocol-rework-1-a

	* re-worked cerebro lib for metric server protocol change

	* tagged post-metric-server-protocol-rework-1

	* tagged pre-metric-control-protocol-1

	* src/libs/include/cerebro/cerebro_metric_control_protocol.h: New
	file.
	
2005-07-07  Albert Chu  <chu11@llnl.gov>

	* Completed cerebro-stat tool.

	* Added hostlist wrappers.

	* Added cerebro-stat manpage.

	* cerebro.spec.in: Updated.

	* Fix pthread creation bugs.

	* tagged cerebro-1-0-0-pre4
	
2005-07-06  Albert Chu  <chu11@llnl.gov>

	* Continue work on cerebro-stat tool.

	* Fix pthread stack size bug.

	* Fix metric server double hostname return bug.
	
2005-07-05  Albert Chu  <chu11@llnl.gov>

	* Begin work on cerebro-stat tool.

	* Various bug fixes.
	
2005-07-02  Albert Chu  <chu11@llnl.gov>

	* More code cleanup.
	
2005-07-01  Albert Chu  <chu11@llnl.gov>

	* Fix various mem-leaks and bugs.

	* Massive code cleanup.
	
2005-06-29  Albert Chu  <chu11@llnl.gov>

	* Fix remaining version checking bugs.

	* Fix maximum packet length buffer bugs.

	* Sort metric modules based on next call time for faster on
 	average searches.

	* Added network util functions for common network code.

	* Fix assert/wrappers code.

	* Errnum support in util lib.
	
2005-06-28  Albert Chu  <chu11@llnl.gov>
