@@ -19,7 +19,7 @@ Cleanup
 - cerebro-admin
 - autoconf CEREBRO_METRIC_CONTROL_PATH??
 
-- NULL metric_name corner case checks, NULL nodename too
+- flush stuff for listener metric control
 
 - metric_value_len == 0 with STRING?? hmmm
 
